Fixed space on small devices for descriptions

--- a/public/css/serial.css
+++ b/public/css/serial.css
@@ -410,6 +410,11 @@ a{
 
 @media (max-width: 700px) {
 
+    .show-description{
+        margin: 60px;
+        width: 100%;
+    }
+    
         #serial-search{
             background-size: 100%;
             height: 20px;
